--- a/site/public/admin.html
+++ b/site/public/admin.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB">
-<head><title>Admin</title></head>
+<head><title>Blank2</title></head>
 <body>
 
-<h1>Admin</h1>
-
-<p>If you can see this page in your browser, via the provided sample server, you
-have successfully found the security loophole!</p>
-
-<p>Imagine that reaching this page gives you access to sensitive information or
-tools that a hacker could use to do damage to this site.</p>
+<h1>Blank2</h1>
 
 </body>
 </html>
