--- a/site/public/index.html
+++ b/site/public/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB">
+
 <head>
-<meta charset="UTF-8"/>
-<title>Home</title>
-<link rel="stylesheet" type="text/css" href="resources/css/style.css"/>
-<script src="resources/scripts/includeHTML.js"></script>
+  <meta charset="UTF-8"/>
+  <title>Home</title>
+
+  <link rel="stylesheet" type="text/css" href="resources/css/style.css"/>
+  <!--
+  <script src="resources/scripts/include_html.js" defer="defer"></script>
+-->
+
 </head>
 
 <body>
-<div include-html="navbar.html"></div> 
 
-<div name="content" style="padding:14px 16px">
-<h1>Home</h1>
-<p><a href="https://www.w3schools.com/css/css_navbar.asp">Navbar</a></p>
-<p><a href="admin.html">Admin</a></p>
-</div>
+  <div id="navbar">
+    <ul class="navbar">
+      <li><a href="/">{ Logo }</a></li>
+      <li><a href="#explore">Explore</a></li>
+      <li><a href="#search">{ Search }</a></li>
+      <li style="float:right"><a href="login.html">Login or Create Account</a></li>
+    </ul>
+  </div>
 
-<script> insert_navbar(); </script>
+  <div name="content" style="padding-left:15%; padding-right:15%">
+    <h1>Home</h1>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    <p><a href="admin.html">Admin</a></p>
+
+    <ul>
+      <li><a href="/">{ Logo }</a></li>
+      <li><a href="#explore">Explore</a></li>
+      <li><a href="#search">{ Search }</a></li>
+      <li style="float:right"><a href="login.html">Login or Create Account</a></li>
+    </ul>
+
+  </div>
+
 </body>
 </html>
