--- a/site/public/login.html
+++ b/site/public/login.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB">
-<head><title>Title</title></head>
+
+<head>
+  <meta charset="UTF-8"/>
+  <title>Login</title>
+  <link rel="stylesheet" type="text/css" href="resources/css/style.css"/>
+  <!-- <script src="resources/scripts/include_html.js" defer="defer"></script> -->
+
+</head>
+
 <body>
-<h1>Blank</h1>
+
+  <div name="navbar">
+    <ul>
+      <li><a href="/">{ Logo }</a></li>
+      <li><a href="#explore">Explore</a></li>
+      <li><a href="#search">{ Search }</a></li>
+      <li style="float:right"><a href="login.html">Login or Create Account</a></li>
+    </ul>
+  </div>
+
+  <div name="content" style="padding:14px 16px">
+    <h1>Login</h1>
+  </div>
+
 </body>
 </html>
