--- a/site/public/login.html
+++ b/site/public/login.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <div name="navbar">
+  <div class="navbar">
     <ul>
       <li><a href="/">{ Logo }</a></li>
       <li><a href="#explore">Explore</a></li>
@@ -19,9 +19,11 @@
       <li style="float:right"><a href="login.html">Login or Create Account</a></li>
     </ul>
   </div>
-
-  <div name="content" style="padding:14px 16px">
-    <h1>Login</h1>
+  
+  <div id="wrapper" style="padding-left:15%; padding-right:15%; height:100%;">
+    <div class="content">
+      <h1>login</h1>
+    </div>
   </div>
 
 </body>
