--- a/site/public/index.html
+++ b/site/public/index.html
@@ -30,14 +30,64 @@
   </div>
 
   <div id="wrapper" style="padding-left:15%; padding-right:15%; height:100%;">
+
+    <div class="content_types">
+      <a class="active" href="#">MAPS</a>
+      <a href="#">CONFIGS</a>
+      <a href="#">MODELS</a>
+      <a href="#">OTHER</a>
+    </div>
+
     <div class="content">
 
-      <div class="content_types">
-        <a class="active" href="#">MAPS</a>
-        <a href="#">CONFIGS</a>
-        <a href="#">MODELS</a>
-        <a href="#">OTHER</a>
-      </div>
+      <p>Description about .bsp files and filter/order options.</p>
+
+      <table>
+        <tbody>
+          <tr>
+            <td style="width:200px">
+              <object data="resources/img/bsp_svg.svg" type="image/svg+xml"></object>
+            </td>
+            <td>
+              <h1>map1 <em> by <a href="#">User 1</a></em></h1>
+              <p><strong>
+                <i class="fa fa-download" style="color:blue"></i> 1 &#160;&#160;
+                <i class="fa fa-heart" style="color:red"></i> 10 &#160;&#160;
+                <i class="fa fa-upload" style="color:grey"></i> 01/04/2020
+              </strong></p>
+              <p>Description</p>
+            </td>
+          </tr>
+          <tr>
+            <td style="width:200px">
+              <object data="resources/img/bsp_svg.svg" type="image/svg+xml"></object>
+            </td>
+            <td>
+              <h1>map2 <em> by <a href="#">User 2</a></em></h1>
+              <p><strong>
+                <i class="fa fa-download" style="color:blue"></i> 2 &#160;&#160;
+                <i class="fa fa-heart" style="color:red"></i> 20 &#160;&#160;
+                <i class="fa fa-upload" style="color:grey"></i> 02/04/2020
+              </strong></p>
+              <p>Description</p>
+            </td>
+          </tr>
+          <tr>
+            <td style="width:200px">
+              <object data="resources/img/bsp_svg.svg" type="image/svg+xml"></object>
+            </td>
+            <td>
+              <h1>map3 <em> by <a href="#">User 3</a></em></h1>
+              <p><strong>
+                <i class="fa fa-download" style="color:blue"></i> 3 &#160;&#160;
+                <i class="fa fa-heart" style="color:red"></i> 30 &#160;&#160;
+                <i class="fa fa-upload" style="color:grey"></i> 03/04/2020
+              </strong></p>
+              <p>Description</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
 
       <p><a href="admin.html">Admin</a></p>
       <p style="text-align: center"><a href="/">Return to top</a></p>
