--- a/site/public/index.html
+++ b/site/public/index.html
@@ -45,45 +45,45 @@
       <table>
         <tbody>
           <tr>
-            <td style="width:200px">
-              <object data="resources/img/bsp_svg.svg" type="image/svg+xml"></object>
-            </td>
+            <td style="width:200px"><a href="map.html">
+              <img src="resources/img/bsp_png.png" type="image/png"></img>
+            </a></td>
             <td>
-              <h1>map1 <em> by <a href="#">User 1</a></em></h1>
+              <h1><a href="map.html">map1</a> <em> by <a href="#">User 1</a></em></h1>
               <p><strong>
                 <i class="fa fa-download" style="color:blue"></i> 1 &#160;&#160;
                 <i class="fa fa-heart" style="color:red"></i> 10 &#160;&#160;
                 <i class="fa fa-upload" style="color:grey"></i> 01/04/2020
               </strong></p>
-              <p>Description</p>
+              <p>Description 1</p>
             </td>
           </tr>
           <tr>
-            <td style="width:200px">
-              <object data="resources/img/bsp_svg.svg" type="image/svg+xml"></object>
-            </td>
+            <td style="width:200px"><a href="map.html">
+              <img src="resources/img/bsp_png.png" type="image/png"></img>
+            </a></td>
             <td>
-              <h1>map2 <em> by <a href="#">User 2</a></em></h1>
+              <h1><a href="map.html">map2</a> <em> by <a href="#">User 2</a></em></h1>
               <p><strong>
                 <i class="fa fa-download" style="color:blue"></i> 2 &#160;&#160;
                 <i class="fa fa-heart" style="color:red"></i> 20 &#160;&#160;
                 <i class="fa fa-upload" style="color:grey"></i> 02/04/2020
               </strong></p>
-              <p>Description</p>
+              <p>Description 2</p>
             </td>
           </tr>
           <tr>
-            <td style="width:200px">
-              <object data="resources/img/bsp_svg.svg" type="image/svg+xml"></object>
-            </td>
+            <td style="width:200px"><a href="map.html">
+              <img src="resources/img/bsp_png.png" type="image/png"></img>
+            </a></td>
             <td>
-              <h1>map3 <em> by <a href="#">User 3</a></em></h1>
+              <h1><a href="map.html">map3</a> <em> by <a href="#">User 3</a></em></h1>
               <p><strong>
                 <i class="fa fa-download" style="color:blue"></i> 3 &#160;&#160;
                 <i class="fa fa-heart" style="color:red"></i> 30 &#160;&#160;
                 <i class="fa fa-upload" style="color:grey"></i> 03/04/2020
               </strong></p>
-              <p>Description</p>
+              <p>Description 3</p>
             </td>
           </tr>
         </tbody>
