--- a/site/public/map.html
+++ b/site/public/map.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" type="text/css" href="resources/css/global_style.css"/>
   <link rel="stylesheet" type="text/css" href="resources/css/navbar.css"/>
+  <link rel="stylesheet" type="text/css" href="resources/css/page_content.css"/>
   <!--
     <script src="resources/scripts/include_html.js" defer="defer"></script>
   -->
@@ -27,11 +28,18 @@
     </div>
     <a href="login.html" style="float:right">Login or Create Account</a>
   </div>
-  <div id="wrapper" style="padding-left:15%; padding-right:15%; height:100%;">
+
+  <div id="wrapper" style="padding-left:5%; padding-right:5%; height:100%;">
     <div class="content">
-      <h1>login</h1>
+      <h1>FILENAME.bsp</h1>
+
+      <div class="container">
+        <p><i class="fa fa-arrow-circle-left">&#160;&#160;</i></p>
+        <object data="resources/img/bsp_svg.svg" type="image/svg+xml"></object>
+        <p>&#160;&#160;<i class="fa fa-arrow-circle-right"></i></p>
+      </div>
     </div>
   </div>
 
-</body>
-</html>
+  </body>
+  </html>
