more work on the map template

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -90,7 +90,7 @@
       </table>
 
       <p><a href="admin.html">Admin</a></p>
-      <p style="text-align: center"><a href="/">Return to top</a></p>
+      <p style="text-align: center"><a href="#"><i class="fa fa-arrow-up"></i></a></p>
     </div>
   </div>
 
