--- a/site/public/map.html
+++ b/site/public/map.html
@@ -32,13 +32,43 @@
   <div id="wrapper" style="padding-left:5%; padding-right:5%; height:100%;">
     <div class="content">
       <h1>FILENAME.bsp</h1>
+      <h2>by <a href="#">User</a></h2>
 
       <div class="container">
-        <p><i class="fa fa-arrow-circle-left">&#160;&#160;</i></p>
-        <object data="resources/img/bsp_svg.svg" type="image/svg+xml"></object>
-        <p>&#160;&#160;<i class="fa fa-arrow-circle-right"></i></p>
+        <p><i class="fa fa-arrow-circle-left"></i>&#160;</p>
+        <div class="container" style= "width:80%; height:500px;">
+          <object data="resources/img/bsp_svg.svg" type="image/svg+xml" height="500px"></object>
+        </div>
+        <p>&#160;<i class="fa fa-arrow-circle-right"></i></p>
       </div>
+
+      <div class="border"></div>
+
+      <p><strong>
+        <i class="fa fa-download" style="color:blue"></i> 2 &#160;&#160;
+        <i class="fa fa-heart" style="color:red"></i> 20
+      </strong></p>
+
+      <div class="border"></div>
+
+      <h3>Description</h3>
+      <p>Enter Description Here</p>
+      <p id="upload_tag">Uploaded 01/04/2020</p>
+
+      <div class="border"></div>
+
+      <h3>Comments (3)</h3>
+
+      <p id="username"><a href="#">User 1</a> (1 day ago)</p>
+      <p id="comment">Comment 1</p>
+      <p id="username"><a href="#">User 2</a> (2 days ago)</p>
+      <p id="comment">Comment 2</p>
+      <p id="username"><a href="#">User 3</a> (3 days ago)</p>
+      <p id="comment">Comment 3</p>
+
+      <p style="text-align: center"><a href="#"><i class="fa fa-arrow-up"></i></a></p>
     </div>
+
   </div>
 
   </body>
