--- a/site/public/index.html
+++ b/site/public/index.html
@@ -49,7 +49,7 @@
               <img src="resources/img/bsp_png.png" type="image/png"></img>
             </a></td>
             <td>
-              <h1><a href="map.html">map1</a> <em> by <a href="#">User 1</a></em></h1>
+              <h1><a href="map.html">map1</a> <em> by <a href="user.html">User 1</a></em></h1>
               <p><strong>
                 <i class="fa fa-download" style="color:blue"></i> 1 &#160;&#160;
                 <i class="fa fa-heart" style="color:red"></i> 10 &#160;&#160;
@@ -63,7 +63,7 @@
               <img src="resources/img/bsp_png.png" type="image/png"></img>
             </a></td>
             <td>
-              <h1><a href="map.html">map2</a> <em> by <a href="#">User 2</a></em></h1>
+              <h1><a href="map.html">map2</a> <em> by <a href="user.html">User 2</a></em></h1>
               <p><strong>
                 <i class="fa fa-download" style="color:blue"></i> 2 &#160;&#160;
                 <i class="fa fa-heart" style="color:red"></i> 20 &#160;&#160;
@@ -77,7 +77,7 @@
               <img src="resources/img/bsp_png.png" type="image/png"></img>
             </a></td>
             <td>
-              <h1><a href="map.html">map3</a> <em> by <a href="#">User 3</a></em></h1>
+              <h1><a href="map.html">map3</a> <em> by <a href="user.html">User 3</a></em></h1>
               <p><strong>
                 <i class="fa fa-download" style="color:blue"></i> 3 &#160;&#160;
                 <i class="fa fa-heart" style="color:red"></i> 30 &#160;&#160;
