--- a/site/public/map.html
+++ b/site/public/map.html
@@ -32,14 +32,14 @@
   <div id="wrapper" style="padding-left:5%; padding-right:5%; height:100%;">
     <div class="content">
       <h1>FILENAME.bsp</h1>
-      <h2>by <a href="#">User</a></h2>
+      <h2>by <a href="user.html">User</a></h2>
 
       <div class="container">
-        <p><i class="fa fa-arrow-circle-left"></i>&#160;</p>
+        <a href="#"><i class="fa fa-arrow-left"></i>&#160;</a>
         <div class="container" style= "width:80%; height:500px;">
-          <object data="resources/img/bsp_svg.svg" type="image/svg+xml" height="500px"></object>
+          <img src="resources/img/bsp_png.png" type="image/png" height="500px"></img>
         </div>
-        <p>&#160;<i class="fa fa-arrow-circle-right"></i></p>
+        <a href="#">&#160;<i class="fa fa-arrow-right"></i></a>
       </div>
 
       <div class="border"></div>
@@ -59,11 +59,11 @@
 
       <h3>Comments (3)</h3>
 
-      <p id="username"><a href="#">User 1</a> (1 day ago)</p>
+      <p id="username"><a href="user.html">User 1</a> (1 day ago)</p>
       <p id="comment">Comment 1</p>
-      <p id="username"><a href="#">User 2</a> (2 days ago)</p>
+      <p id="username"><a href="user.html">User 2</a> (2 days ago)</p>
       <p id="comment">Comment 2</p>
-      <p id="username"><a href="#">User 3</a> (3 days ago)</p>
+      <p id="username"><a href="user.html">User 3</a> (3 days ago)</p>
       <p id="comment">Comment 3</p>
 
       <p style="text-align: center"><a href="#"><i class="fa fa-arrow-up"></i></a></p>
