user page formatting

--- a/site/public/user.html
+++ b/site/public/user.html
@@ -29,7 +29,21 @@
 
   <div id="wrapper" style="padding-left:5%; padding-right:5%; height:100%;">
     <div class="content">
-      
+      <h1>username</h1>
+
+      <div class="container">
+        <div class="submissions">
+          <h1>SUBMISSIONS</h1>
+          <div class="border"></div>
+          
+          <p>submission1</p>
+          <p>submission2</p>
+          <p>submission3</p>
+        </div>
+        <div class="user_details">
+          <h1>user_details</h1>
+        </div>
+      </div>
     </div>
   </div>
 
