--- a/site/public/user.html
+++ b/site/public/user.html
@@ -34,11 +34,39 @@
       <div class="container">
         <div class="submissions">
           <h1>SUBMISSIONS</h1>
-          <div class="border"></div>
-          
-          <p>submission1</p>
-          <p>submission2</p>
-          <p>submission3</p>
+          <p style="text-align:right">{+ ordering /filtering options}&#160;</p>
+
+            <table><tbody>
+              <tr class="submission">
+                <td style="width:70px">
+                  <object data="resources/img/bsp_svg.svg" type="image/svg+xml"></object>
+                </td>
+                <td>
+                  <h2><a href="map.html">map.bsp</a></h2>
+                  <p id="upload_tag"> Uploaded 01/04/2020</p>
+                  <p><strong>
+                    <i class="fa fa-download" style="color:blue"></i> 1 &#160;&#160;
+                    <i class="fa fa-heart" style="color:red"></i> 10
+                  </strong></p>
+                </td>
+              </tr>
+
+              <tr class="submission">
+                <td style="width:70px">
+                  <object data="resources/img/bsp_svg.svg" type="image/svg+xml"></object>
+                </td>
+                <td>
+                  <h2><a href="map.html">map.bsp</a></h2>
+                  <p id="upload_tag"> Uploaded 01/04/2020</p>
+                  <p><strong>
+                    <i class="fa fa-download" style="color:blue"></i> 1 &#160;&#160;
+                    <i class="fa fa-heart" style="color:red"></i> 10
+                  </strong></p>
+                </td>
+              </tr>
+            </tbody></table>
+
+
         </div>
         <div class="user_details">
           <h1>user_details</h1>
