formatting user details and comment box

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -21,7 +21,7 @@
   <div class="navbar">
     <a href="/">{ Logo }</a>
     <a href="/">Explore</a>
-    <a href="/">Random</a>
+    <a href="map.html">Random</a>
     <div class="searchbar">
       <input type="text" placeholder="Search..." name="search"></input>
       <button type="submit"><i class="fa fa-search"></i></button>
@@ -90,6 +90,7 @@
       </table>
 
       <p><a href="admin.html">Admin</a></p>
+      <br/><br/>
       <p style="text-align: center"><a href="#"><i class="fa fa-arrow-up"></i></a></p>
     </div>
   </div>
