--- a/site/public/user.html
+++ b/site/public/user.html
@@ -19,7 +19,7 @@
   <div class="navbar">
     <a href="/">{ Logo }</a>
     <a href="/">Explore</a>
-    <a href="/">Random</a>
+    <a href="map.html">Random</a>
     <div class="searchbar">
       <input type="text" placeholder="Search..." name="search"></input>
       <button type="submit"><i class="fa fa-search"></i></button>
@@ -37,6 +37,7 @@
           <p style="text-align:right">{+ ordering /filtering options}&#160;</p>
 
             <table><tbody>
+
               <tr class="submission">
                 <td style="width:70px">
                   <object data="resources/img/bsp_svg.svg" type="image/svg+xml"></object>
@@ -64,14 +65,27 @@
                   </strong></p>
                 </td>
               </tr>
+
             </tbody></table>
 
 
         </div>
         <div class="user_details">
-          <h1>user_details</h1>
+          <strong>User since:</strong>
+          <p>01/04/2020</p>
+          <strong>Downloads received:</strong>
+          <p><i class="fa fa-download" style="color:blue"></i> 20</p>
+          <strong>Favourites received:</strong>
+          <p><i class="fa fa-heart" style="color:red"></i> 10</p>
+          <strong>Number of submissions:</strong>
+          <p><i class="fa fa-upload" style="color:grey"></i> 5</p>
+          <strong>About:</strong>
+          <p>Test profile blog here</p>
         </div>
       </div>
+
+      <br/><br/>
+      <p style="text-align: center"><a href="#"><i class="fa fa-arrow-up"></i></a></p>
     </div>
   </div>
 
