comment box padding corrected

--- a/site/public/map.html
+++ b/site/public/map.html
@@ -57,22 +57,23 @@
 
       <div class="border"></div>
 
-      <div class="comments">
-        <h3>Comments (3)</h3>
+      <h3>Comments (3)</h3>
 
-        <p id="username"><a href="user.html">User 1</a> (1 day ago)</p>
-        <p id="comment">Comment 1</p>
-        <p id="username"><a href="user.html">User 2</a> (2 days ago)</p>
-        <p id="comment">Comment 2</p>
-        <p id="username"><a href="user.html">User 3</a> (3 days ago)</p>
-        <p id="comment">Comment 3</p>
+      <p id="username"><a href="user.html">User 1</a> (1 day ago)</p>
+      <p id="comment">Comment 1</p>
+      <p id="username"><a href="user.html">User 2</a> (2 days ago)</p>
+      <p id="comment">Comment 2</p>
+      <p id="username"><a href="user.html">User 3</a> (3 days ago)</p>
+      <p id="comment">Comment 3</p>
 
-        <form action="#">
-          <input type="text" id="comment" placeholder="You must be logged in to comment."></input><br/>
-          <input type="submit" value="Submit"></input>
-        </form>
-      </div>
-      
+      <div class="border"></div>
+      <br/>
+
+      <form action="#">
+        <textarea rows="4" cols="50" id="add_comment" placeholder="You must be logged in to comment."/><br/>
+        <input type="submit" value="Submit"></input>
+      </form>
+
       <br/><br/>
       <p style="text-align: center"><a href="#"><i class="fa fa-arrow-up"></i></a></p>
     </div>
