--- a/site/public/map.html
+++ b/site/public/map.html
@@ -27,6 +27,8 @@
       <button type="submit"><i class="fa fa-search"></i></button>
     </div>
     <a href="login.html" style="float:right">Login or Create Account</a>
+    <a href="user.html" style="float:right">Profile</a>
+    <a href="upload.html" style="float:right">Upload</a>
   </div>
 
   <div id="wrapper" style="padding-left:5%; padding-right:5%; height:100%;">
