cleaned up some css

--- a/site/public/user.html
+++ b/site/public/user.html
@@ -70,9 +70,9 @@
 
             </tbody></table>
 
-
         </div>
         <div class="user_details">
+          <!-- <h1>PROFILE</h1> -->
           <strong>User since:</strong>
           <p>01/04/2020</p>
           <strong>Downloads received:</strong>
