--- a/site/public/upload.html
+++ b/site/public/upload.html
@@ -33,6 +33,42 @@
 
   <div id="wrapper" style="padding-left:5%; padding-right:5%; height:100%;">
     <div class="content">
+      <h1>UPLOAD</h1>
+
+      <!--
+        Name
+        Category
+        File
+        Screenshots
+        Description
+        Tags?
+      -->
+
+      <form class="upload_form">
+
+        <label id="lab">Type of submission:&#160;</label>
+        <select id="s_cats">
+          <option value="default">Select Category</option>
+          <option value="o_map">Map</option>
+          <option value="o_config">Config</option>
+          <option value="o_model">Model</option>
+          <option value="o_other">Other</option>
+        </select><br/>
+
+        <label id="lab">Submission name:&#160;</label>
+        <input type="text" id="s_name" placeholder="Name"></input><br/>
+
+        <label id="lab">Upload map file:&#160;</label>
+        <input type="text" id="s_file" placeholder="File"></input><br/>
+
+        <label id="lab">Description:&#160;</label>
+        <textarea rows="4" cols="50" id="s_desc" placeholder="Write a description here..."/><br/>
+
+        <label id="lab">Screenshots:&#160;</label>
+        <input type="text" id="s_screenshots" placeholder="Screenshots"></input><br/>
+
+        <input id="but_submit" type="submit" value="Submit"></input>
+      </form>
 
     </div>
   </div>
