--- a/site/public/create_account.html
+++ b/site/public/create_account.html
@@ -34,7 +34,7 @@
   <div id="wrapper" style="padding-left:15%; padding-right:15%; height:100%;">
     <div class="content">
 
-      <h1>Login</h1>
+      <h1>Create Account</h1>
 
       <form class="login_form">
 
@@ -44,7 +44,7 @@
         <label id="lab">Password:&#160;</label>
         <input type="text" id="l_password"></input><br/>
 
-        <input id="but_login" type="submit" value="Login"></input>
+        <input id="but_submit" type="submit" value="Login"></input>
       </form>
       <p id="create_acc">Or, <a href="create_account.html">Create an Account</a></p>
     </div>
