--- a/site/public/login.html
+++ b/site/public/login.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" type="text/css" href="resources/css/global_style.css"/>
   <link rel="stylesheet" type="text/css" href="resources/css/navbar.css"/>
-  <link rel="stylesheet" type="text/css" href="resources/css/login_style.css"/>
+  <link rel="stylesheet" type="text/css" href="resources/css/account_handling.css"/>
   <!--
     <script src="resources/scripts/include_html.js" defer="defer"></script>
   -->
@@ -36,13 +36,13 @@
 
       <h1>Login</h1>
 
-      <form class="login_form">
+      <form class="account_form">
 
         <label id="lab">Username:&#160;</label>
         <input type="text" id="l_username"></input><br/>
 
         <label id="lab">Password:&#160;</label>
-        <input type="text" id="l_password"></input><br/>
+        <input type="password" id="l_password"></input><br/>
 
         <input id="but_login" type="submit" value="Login"></input>
       </form>
