--- a/site/public/user.html
+++ b/site/public/user.html
@@ -82,6 +82,7 @@
           <strong>Number of submissions:</strong>
           <p><i class="fa fa-upload" style="color:grey"></i> 5</p>
           <strong>About:</strong>
+          <a href="#">Edit Section</a>
           <p>Test profile blog here</p>
         </div>
       </div>
