added form handler for new accounts

--- a/site/public/create_account.html
+++ b/site/public/create_account.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="resources/css/account_handling.css"/>
 
   <script src="resources/scripts/insert_Navbar.js" defer="defer"></script>
-
+  <script src="/addUser.js" defer="defer"></script>
 </head>
 
 <body>
@@ -23,12 +23,11 @@
 
       <h1>Create Account</h1>
 
-      <form class="account_form">
+      <form id="account_form" class="account_form">
 
         <label id="lab">Username:&#160;</label>
         <input type="text" id="l_username"></input><br/>
-        <label id="taken_username">&#160;<!--Username not taken--></label>
-
+        <label id="taken_username">&#160;<!--Username not taken-->Username</label>
         <label id="lab">Password:&#160;</label>
         <input type="password" id="l_password_1"></input><br/>
 
