--- a/site/public/create_account.html
+++ b/site/public/create_account.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="resources/css/account_handling.css"/>
 
   <script src="resources/scripts/insert_Navbar.js" defer="defer"></script>
-  <script src="/addUser.js" defer="defer"></script>
+  <script src="resources/scripts/addUser.js" defer="defer"></script>
 </head>
 
 <body>
