clientside form handling

--- a/site/public/create_account.html
+++ b/site/public/create_account.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="resources/css/account_handling.css"/>
 
   <script src="resources/scripts/insert_Navbar.js" defer="defer"></script>
-  <script src="resources/scripts/addUser.js" defer="defer"></script>
+  <script src="resources/scripts/account_Submitted.js" defer="defer"></script>
 </head>
 
 <body>
@@ -23,16 +23,18 @@
 
       <h1>Create Account</h1>
 
-      <form id="account_form" class="account_form">
+      <form id="account_form">
 
         <label id="lab">Username:&#160;</label>
         <input type="text" id="l_username"></input><br/>
-        <label id="taken_username">&#160;<!--Username not taken-->Username</label>
+        <label id="username_helper">&#160;<i class="fa fa-info-circle"></i>&#160;Usernames can only use alphanumeric characters.</label>
         <label id="lab">Password:&#160;</label>
         <input type="password" id="l_password_1"></input><br/>
 
         <label id="lab">Confirm Password:&#160;</label>
         <input type="password" id="l_password_2"></input><br/>
+
+        <label id="l_status">&#160;</label>
 
         <input id="but_create_account" type="submit" value="Create Account"></input>
       </form>
