--- a/site/public/upload.html
+++ b/site/public/upload.html
@@ -11,8 +11,9 @@
   <link rel="stylesheet" type="text/css" href="resources/css/navbar.css"/>
   <link rel="stylesheet" type="text/css" href="resources/css/upload_content.css"/>
 
-  <script src="resources/scripts/upload_FormOpener.js" defer="defer"></script>
   <script src="resources/scripts/insert_Navbar.js" defer="defer"></script>
+  <script src="resources/scripts/upload_FormOpener.js" defer="defer"></script>
+  <script src="resources/scripts/file_Submitted.js" defer="defer"></script>
 
 </head>
 
@@ -23,8 +24,8 @@
     <div class="content">
       <h1>UPLOAD</h1>
                                 <!--method="post" enctype="multipart/form-data"-->
-      <div id="upload_form">
-        <form class="upload_form">
+      <div id="upload_form_div">
+        <form id="upload_form">
 
           <label id="lab_cat">Type of submission:&#160;</label>
           <select id="s_cats" onchange="formatCategory()">
@@ -112,6 +113,8 @@
 
             <br/>
           </div>
+
+          <label id="l_status">&#160;</label>
 
           <input id="but_submit" type="submit" value="Submit"></input>
         </form>
