added file uploads to required forms

--- a/site/public/upload.html
+++ b/site/public/upload.html
@@ -36,10 +36,10 @@
             <option value="o_other">Other</option>
           </select><br/>
           <br/>
+
           <!--
            TODO: add options for thumbnails and tags
            show small screenshots when uploading
-           enforce mandatory fields are filled in
 
            if not logged in, replace upload_form div contents with message and link to login page.
          -->
@@ -55,8 +55,8 @@
             <label id="lab_desc_map">Description:&#160;</label>
             <textarea rows="4" cols="50" id="s_desc_map" placeholder="Write a description here..."/><br/>
 
-            <label id="lab_screenshots_map">Screenshots:&#160;</label>
-            <input type="file" id="s_screenshots_map" multiple="multiple"></input><br/>
+            <label id="lab_scsh_map">Screenshots:&#160;</label>
+            <input type="file" id="s_scsh_map" multiple="multiple"></input><br/>
             <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Each screenshot should be a .png or .jpg file</label>
 
             <br/>
@@ -89,8 +89,8 @@
             <label id="lab_desc_model">Description:&#160;</label>
             <textarea rows="4" cols="50" id="s_desc_model" placeholder="Write a description here..."/><br/>
 
-            <label id="lab_screenshots_model">Screenshots:&#160;</label>
-            <input type="file" id="s_screenshots_model" multiple="multiple"></input><br/>
+            <label id="lab_scsh_model">Screenshots:&#160;</label>
+            <input type="file" id="s_scsh_model" multiple="multiple"></input><br/>
             <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Each screenshot should be a .png or .jpg file</label>
 
             <br/>
