serv.js integration work

--- a/site/public/login.html
+++ b/site/public/login.html
@@ -13,6 +13,8 @@
 
   <script src="resources/scripts/insert_Navbar.js" defer="defer"></script>
   <script src="resources/scripts/login_Submitted.js" defer="defer"></script>
+  <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha1.js"></script>
+  <!-- from https://stackoverflow.com/questions/22257172/how-to-make-a-login-system-in-javascript -->
 
 </head>
 
