--- a/site/public/upload.html
+++ b/site/public/upload.html
@@ -56,7 +56,7 @@
             <textarea rows="4" cols="50" id="s_desc_map" placeholder="Write a description here..."/><br/>
 
             <label id="lab_scsh_map">Screenshots:&#160;</label>
-            <input type="file" id="s_scsh_map" multiple="multiple"></input><br/>
+            <input type="file" id="s_scsh_map" size="8" multiple="multiple"></input><br/>
             <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Each screenshot should be a .png or .jpg file</label>
 
             <br/>
@@ -90,7 +90,7 @@
             <textarea rows="4" cols="50" id="s_desc_model" placeholder="Write a description here..."/><br/>
 
             <label id="lab_scsh_model">Screenshots:&#160;</label>
-            <input type="file" id="s_scsh_model" multiple="multiple"></input><br/>
+            <input type="file" id="s_scsh_model" size="8" multiple="multiple"></input><br/>
             <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Each screenshot should be a .png or .jpg file</label>
 
             <br/>
@@ -98,8 +98,8 @@
 
           <div id="t_other">
             <!-- TODO: Add submission name, other category specification, file w/upload comment, desciption, optional screenshots -->
-            <label id="lab_cat_other">Custom submission category:&#160;</label>
-            <input type="text" id="s_cat_other"></input><br/>
+            <label id="lab_cats_other">Custom submission category:&#160;</label>
+            <input type="text" id="s_cats_other"></input><br/>
 
             <label id="lab_name_other">Submission name:&#160;</label>
             <input type="text" id="s_name_other"></input><br/>
