integration pt.1 ; also fixed root references in public files

--- a/site/public/create_account.html
+++ b/site/public/create_account.html
@@ -7,12 +7,12 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
-  <link rel="stylesheet" type="text/css" href="resources/css/global_style.css"/>
-  <link rel="stylesheet" type="text/css" href="resources/css/navbar.css"/>
-  <link rel="stylesheet" type="text/css" href="resources/css/account_handling.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/global_style.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/navbar.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/account_handling.css"/>
 
-  <script src="resources/scripts/insert_navbar.js" defer="defer"></script>
-  <script src="resources/scripts/account_submitted.js" defer="defer"></script>
+  <script src="/resources/scripts/insert_navbar.js" defer="defer"></script>
+  <script src="/resources/scripts/account_submitted.js" defer="defer"></script>
 </head>
 
 <body>
