--- a/site/public/index.html
+++ b/site/public/index.html
@@ -7,11 +7,11 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
-  <link rel="stylesheet" type="text/css" href="resources/css/global_style.css"/>
-  <link rel="stylesheet" type="text/css" href="resources/css/navbar.css"/>
-  <link rel="stylesheet" type="text/css" href="resources/css/grid_content.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/global_style.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/navbar.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/grid_content.css"/>
 
-  <script src="resources/scripts/insert_navbar.js" defer="defer"></script>
+  <script src="/resources/scripts/insert_navbar.js" defer="defer"></script>
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <tbody>
           <tr>
             <td style="width:200px"><a href="map.html">
-              <img src="resources/img/bsp_png.png" type="image/png"></img>
+              <img src="/resources/img/bsp_png.png" type="image/png"></img>
             </a></td>
             <td>
               <h1><a href="map.html">map1</a> <em> by <a href="user.html">User 1</a></em></h1>
@@ -49,7 +49,7 @@
           </tr>
           <tr>
             <td style="width:200px"><a href="map.html">
-              <img src="resources/img/bsp_png.png" type="image/png"></img>
+              <img src="/resources/img/bsp_png.png" type="image/png"></img>
             </a></td>
             <td>
               <h1><a href="map.html">map2</a> <em> by <a href="user.html">User 2</a></em></h1>
@@ -63,7 +63,7 @@
           </tr>
           <tr>
             <td style="width:200px"><a href="map.html">
-              <img src="resources/img/bsp_png.png" type="image/png"></img>
+              <img src="/resources/img/bsp_png.png" type="image/png"></img>
             </a></td>
             <td>
               <h1><a href="map.html">map3</a> <em> by <a href="user.html">User 3</a></em></h1>
