--- a/site/public/map.html
+++ b/site/public/map.html
@@ -7,11 +7,11 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
-  <link rel="stylesheet" type="text/css" href="resources/css/global_style.css"/>
-  <link rel="stylesheet" type="text/css" href="resources/css/navbar.css"/>
-  <link rel="stylesheet" type="text/css" href="resources/css/page_content.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/global_style.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/navbar.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/page_content.css"/>
 
-  <script src="resources/scripts/insert_navbar.js" defer="defer"></script>
+  <script src="/resources/scripts/insert_navbar.js" defer="defer"></script>
 
 </head>
 
@@ -20,13 +20,13 @@
 
   <div id="wrapper" style="padding-left:5%; padding-right:5%; height:100%;">
     <div class="content">
-      <h1>FILENAME.bsp</h1>
-      <h2>by <a href="user.html">User</a></h2>
+      <h1>$</h1>
+      <h2>by <a href="user.html">$</a></h2>
 
       <div class="container">
         <a href="#"><i class="fa fa-arrow-left"></i>&#160;</a>
         <div class="container" style= "width:80%; height:500px;">
-          <img src="resources/img/bsp_png.png" type="image/png" height="500px"></img>
+          <img src="/resources/img/bsp_png.png" type="image/png" height="500px"></img>
         </div>
         <a href="#">&#160;<i class="fa fa-arrow-right"></i></a>
       </div>
@@ -34,8 +34,8 @@
       <div class="border"></div>
 
       <p><strong>
-        <i class="fa fa-download" style="color:blue"></i> 2 &#160;&#160;
-        <i class="fa fa-heart" style="color:red"></i> 20
+        <i class="fa fa-download" style="color:blue"></i> $ &#160;&#160;
+        <i class="fa fa-heart" style="color:red"></i> $
       </strong></p>
 
       <div class="border"></div>
