--- a/site/public/user.html
+++ b/site/public/user.html
@@ -7,11 +7,11 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
-  <link rel="stylesheet" type="text/css" href="resources/css/global_style.css"/>
-  <link rel="stylesheet" type="text/css" href="resources/css/navbar.css"/>
-  <link rel="stylesheet" type="text/css" href="resources/css/user_content.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/global_style.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/navbar.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/user_content.css"/>
 
-  <script src="resources/scripts/insert_navbar.js" defer="defer"></script>
+  <script src="/resources/scripts/insert_navbar.js" defer="defer"></script>
 
 </head>
 
@@ -31,7 +31,7 @@
 
               <tr class="submission">
                 <td style="width:70px">
-                  <object data="resources/img/bsp_svg.svg" type="image/svg+xml"></object>
+                  <object data="/resources/img/bsp_svg.svg" type="image/svg+xml"></object>
                 </td>
                 <td>
                   <h2><a href="map.html">map.bsp</a></h2>
