--- a/site/public/map.html
+++ b/site/public/map.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="/resources/css/page_content.css"/>
 
   <script src="/resources/scripts/insert_navbar.js" defer="defer"></script>
-
+  <script src="/resources/scripts/file_downloaded.js" defer="defer"></script>
 </head>
 
 <body>
@@ -35,26 +35,29 @@
 
       <p><strong>
         <i class="fa fa-download" style="color:blue"></i> $ &#160;&#160;
-        <i class="fa fa-heart" style="color:red"></i> $
+        <i class="fa fa-heart" style="color:red"></i> $ &#160;&#160;
+        <a href='Download file' id="download"> Download </a>
       </strong></p>
 
       <div class="border"></div>
 
       <h3>Description</h3>
-      <p>Enter Description Here</p>
-      <p id="upload_tag">Uploaded 01/04/2020</p>
+      <p>$</p>
+      <p id="upload_tag">Uploaded $</p>
 
       <div class="border"></div>
 
-      <h3>Comments (3)</h3>
+      <h3>Comments ($)</h3>
 
+      $
+      <!-- TODO: INTEGRATE COMMENT FORMAT
       <p id="username"><a href="user.html">User 1</a> (1 day ago)</p>
       <p id="comment">Comment 1</p>
       <p id="username"><a href="user.html">User 2</a> (2 days ago)</p>
       <p id="comment">Comment 2</p>
       <p id="username"><a href="user.html">User 3</a> (3 days ago)</p>
       <p id="comment">Comment 3</p>
-
+      -->
       <div class="border"></div>
       <br/>
 
