file downloads working

--- a/site/public/map.html
+++ b/site/public/map.html
@@ -36,7 +36,7 @@
       <p><strong>
         <i class="fa fa-download" style="color:blue"></i> $ &#160;&#160;
         <i class="fa fa-heart" style="color:red"></i> $ &#160;&#160;
-        <a href='Download file' id="download"> Download </a>
+        <a href='/download/$'> Download </a>
       </strong></p>
 
       <div class="border"></div>
